--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -1,4 +1,4 @@
-body {
+body, #headerwarp {
   min-width: 1500px !important;
 }
 
@@ -9,6 +9,12 @@ body {
 
 #gNavi.gNavi > ul ul {
   display: block !important;
+  min-width: 150px;
+  transform: translateX(0) !important;
+  height: 300px;
+  background: white;
+  right: 0;
+  width: 100% !important;
 }
 #gNavi.gNavi > ul ul li {
   display: block !important;
