--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -7,18 +7,36 @@ body, #headerwarp {
   justify-content: center !important;
 }
 
+#gNavi.gNavi > ul:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: #fff;
+  transition: 0.5s;
+}
+#gNavi.gNavi > ul:hover ul {
+  height: 300px;
+}
 #gNavi.gNavi > ul ul {
   display: block !important;
   min-width: 150px;
   transform: translateX(0) !important;
-  height: 300px;
-  background: white;
+  height: 0;
+  overflow: hidden;
+  transition: 0.5s;
   right: 0;
   width: 100% !important;
+  position: absolute;
+  left: 0;
+  top: 90px;
 }
 #gNavi.gNavi > ul ul li {
   display: block !important;
   font-size: 15px !important;
+  background-color: transparent !important;
 }
 #gNavi.gNavi > ul > li > a {
   font-family: "Paperlogy 3 Light" !important;
