전체메뉴 노출형태로 수정

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -17,6 +17,7 @@ body, #headerwarp {
   background-color: #fff;
   transition: 0.5s;
 }
+#gNavi.gNavi > ul:hover::before,
 #gNavi.gNavi > ul:hover ul {
   height: 300px;
 }
