메뉴 롤오버 구분선추가

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -7,6 +7,15 @@ body, #headerwarp {
   justify-content: center !important;
 }
 
+#gNavi.gNavi > ul:after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+}
 #gNavi.gNavi > ul:before {
   content: "";
   position: absolute;
