--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -11,6 +11,15 @@ body, #headerwarp{
     &.gNavi{
        
         > ul{
+            &:after{
+                content: "";
+                position: absolute;
+                top: 100%;
+                left: 0;    
+                width: 100%;
+                height: 1px;
+                background-color: #ccc;                
+            }
             &:before{
                 content: "";
                 position: absolute;
