[메인하단]스타일 재수정2

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -80,16 +80,15 @@ body, #headerwarp{
     }
 
 }
-#bodyTable{
-    > ul.image-list_center {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        gap: 20px;
-      }
-    
-    >  ul.image-list_center li {
+#bodyTable {
+    ul.image-list_center {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 20px;
+  
+      li {
         width: 200px;
         height: 200px;
         background-size: cover;
@@ -103,19 +102,40 @@ body, #headerwarp{
         color: white;
         font-weight: bold;
         text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
+  
+        .text {
+          background-color: rgba(0, 0, 0, 0.5);
+          padding: 10px;
+          text-align: center;
+        }
+  
+        &.image_center_item1 {
+          background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon1.svg") center/cover no-repeat;
+        }
+  
+        &.image_center_item2 {
+          background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon2.svg") center/cover no-repeat;
+        }
+  
+        &.image_center_item3 {
+          background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon3.svg") center/cover no-repeat;
+        }
+  
+        &.image_center_item4 {
+          background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon4.svg") center/cover no-repeat;
+        }
+  
+        &.image_center_item5 {
+          background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon5.svg") center/cover no-repeat;
+        }
+  
+        &.image_center_item6 {
+          background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg") center/cover no-repeat;
+        }
       }
-    >  ul.image-list_center li .text {
-        background-color: rgba(0, 0, 0, 0.5);
-        padding: 10px;
-        text-align: center;
-      }
-      ul li .image_center_item1{background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon1.svg") center/cover no-repeat;}
-      ul li .image_center_item2{background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon2.svg") center/cover no-repeat;}
-      ul li .image_center_item3{background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon3.svg") center/cover no-repeat;}
-      ul li .image_center_item4{background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon4.svg") center/cover no-repeat;}
-      ul li .image_center_item5{background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon5.svg") center/cover no-repeat;}
-      ul li .image_center_item6{background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg") center/cover no-repeat;}
-}
+    }
+  }
+  
 
 
 
