--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -63,14 +63,14 @@ body, #headerwarp {
   width: 106px;
 }
 
-#bodyTable > ul.image-list_center {
+#bodyTable ul.image-list_center {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
   gap: 20px;
 }
-#bodyTable > ul.image-list_center li {
+#bodyTable ul.image-list_center li {
   width: 200px;
   height: 200px;
   background-size: cover;
@@ -85,26 +85,26 @@ body, #headerwarp {
   font-weight: bold;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
 }
-#bodyTable > ul.image-list_center li .text {
+#bodyTable ul.image-list_center li .text {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   text-align: center;
 }
-#bodyTable ul li .image_center_item1 {
+#bodyTable ul.image-list_center li.image_center_item1 {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon1.svg") center/cover no-repeat;
 }
-#bodyTable ul li .image_center_item2 {
+#bodyTable ul.image-list_center li.image_center_item2 {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon2.svg") center/cover no-repeat;
 }
-#bodyTable ul li .image_center_item3 {
+#bodyTable ul.image-list_center li.image_center_item3 {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon3.svg") center/cover no-repeat;
 }
-#bodyTable ul li .image_center_item4 {
+#bodyTable ul.image-list_center li.image_center_item4 {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon4.svg") center/cover no-repeat;
 }
-#bodyTable ul li .image_center_item5 {
+#bodyTable ul.image-list_center li.image_center_item5 {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon5.svg") center/cover no-repeat;
 }
-#bodyTable ul li .image_center_item6 {
+#bodyTable ul.image-list_center li.image_center_item6 {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg") center/cover no-repeat;
 }
