--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -85,26 +85,32 @@ body, #headerwarp {
   font-weight: bold;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
 }
+#bodyTable ul.image-list_center li .img {
+  width: 100px;
+  height: 150px;
+  background-size: cover;
+  background-position: center;
+}
 #bodyTable ul.image-list_center li .text {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   text-align: center;
 }
-#bodyTable ul.image-list_center li.image_center_item1 {
+#bodyTable ul.image-list_center li.image_center_item1 .img {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon1.svg") center/cover no-repeat;
 }
-#bodyTable ul.image-list_center li.image_center_item2 {
+#bodyTable ul.image-list_center li.image_center_item2 .img {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon2.svg") center/cover no-repeat;
 }
-#bodyTable ul.image-list_center li.image_center_item3 {
+#bodyTable ul.image-list_center li.image_center_item3 .img {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon3.svg") center/cover no-repeat;
 }
-#bodyTable ul.image-list_center li.image_center_item4 {
+#bodyTable ul.image-list_center li.image_center_item4 .img {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon4.svg") center/cover no-repeat;
 }
-#bodyTable ul.image-list_center li.image_center_item5 {
+#bodyTable ul.image-list_center li.image_center_item5 .img {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon5.svg") center/cover no-repeat;
 }
-#bodyTable ul.image-list_center li.image_center_item6 {
+#bodyTable ul.image-list_center li.image_center_item6 .img {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg") center/cover no-repeat;
 }
