--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -114,3 +114,7 @@ body, #headerwarp {
 #bodyTable ul.image-list_center li.image_center_item6 .img {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg") center/cover no-repeat;
 }
+
+#green19_82294 {
+  height: 100px;
+}
