--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -115,6 +115,69 @@ body, #headerwarp {
   background: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg") center/cover no-repeat;
 }
 
-#green19_81606 {
-  height: 100px;
+#mainbottom .mb_section {
+  display: flex;
+  width: 1920px;
+  padding: 100px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 60px;
+}
+#mainbottom .image-list_center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 81px;
+  align-self: stretch;
+}
+#mainbottom ul.image-list_center li {
+  display: flex;
+  width: 101.224px;
+  padding: 24.433px 26.178px;
+  justify-content: center;
+  align-items: center;
+  gap: 17.452px;
+}
+#mainbottom ul.image-list_center li.image_center_item1 .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon1.svg");
+}
+#mainbottom ul.image-list_center li.image_center_item2 .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon2.svg");
+}
+#mainbottom ul.image-list_center li.image_center_item3 .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon3.svg");
+}
+#mainbottom ul.image-list_center li.image_center_item4 .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon4.svg");
+}
+#mainbottom ul.image-list_center li.image_center_item5 .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon5.svg");
+}
+#mainbottom ul.image-list_center li.image_center_item6 .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg");
+}
+#mainbottom ul.image-list_center li .img {
+  width: 46.524px;
+  height: 49.847px;
+  flex-shrink: 0;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#mainbottom ul.image-list_center li .text {
+  display: flex;
+  width: 164.343px;
+  justify-content: center;
+  align-items: center;
+  gap: 7.272px;
+}
+#mainbottom ul.image-list_center li .text span {
+  color: var(--Color-3, #558CCF);
+  text-align: center;
+  font-family: Paperlogy;
+  font-size: 23.27px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
