--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -140,11 +140,98 @@ body, #headerwarp{
       }
     }
   }
-  #green19_81606{
 
-    height:100px;
+  
+  #mainbottom {
+    .mb_section{
+        display: flex;
+        width: 1920px;
+        padding: 100px 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 60px;
+        }
+        
+      .image-list_center{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 81px;
+        align-self: stretch;
+      }
+      ul.image-list_center{
+        li{
+            display: flex;
+            width: 101.224px;
+            padding: 24.433px 26.178px;
+            justify-content: center;
+            align-items: center;
+            gap: 17.452px;
+            @for $i from 1 through 6 {
+                &.image_center_item#{$i} {
+                    .img {
+                        background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon#{$i}.svg");
+                    }
+                }
+            }
+            .img{
+                width: 46.524px;
+                height: 49.847px;
+                flex-shrink: 0;
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+
+                }
+            .text{
+                display: flex;
+                width: 164.343px;
+                justify-content: center;
+                align-items: center;
+                gap: 7.272px;
+                span{
+                    color: var(--Color-3, #558CCF);
+                    text-align: center;
+                    font-family: Paperlogy;
+                    font-size: 23.27px;
+                    font-style: normal;
+                    font-weight: 500;
+                    line-height: normal;
+                    }
+                }
+            }
+
+      }
+
   }
   
+  
+  
+  
+ 
+
+
+  
+
+    
+//    li.image_center_item1 .img{
+//     background:url("https://juhyun88.github.io/iweb_src/IconandQuick/icon1.svg") center/cover no-repeat}
+    
+//    li.image_center_item2 .img{
+//     background:url("https://juhyun88.github.io/iweb_src/IconandQuick/icon2.svg") center/cover no-repeat}
+    
+//    li.image_center_item3 .img{
+//     background:url("https://juhyun88.github.io/iweb_src/IconandQuick/icon3.svg") center/cover no-repeat}
+    
+//    li.image_center_item4 .img{
+//     background:url("https://juhyun88.github.io/iweb_src/IconandQuick/icon4.svg") center/cover no-repeat}
+    
+//    li.image_center_item5 .img{
+//     background:url("https://juhyun88.github.io/iweb_src/IconandQuick/icon5.svg") center/cover no-repeat}
+    
+//    li.image_center_item6 .img{
+//     background:url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg") center/cover no-repeat}
 
 
 
