--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -133,6 +133,7 @@ body, #headerwarp {
 }
 #mainbottom ul.image-list_center li {
   display: flex;
+  flex-direction: column;
   width: 101.224px;
   padding: 24.433px 26.178px;
   justify-content: center;
@@ -158,26 +159,23 @@ body, #headerwarp {
   background-image: url("https://juhyun88.github.io/iweb_src/IconandQuick/icon6.svg");
 }
 #mainbottom ul.image-list_center li .img {
-  width: 46.524px;
-  height: 49.847px;
+  width: 50px;
+  height: 50px;
   flex-shrink: 0;
   background-position: center;
-  background-size: cover;
   background-repeat: no-repeat;
+  background-color: white;
+  border-radius: 50%;
+  padding: 20px;
 }
 #mainbottom ul.image-list_center li .text {
-  display: flex;
-  width: 164.343px;
-  justify-content: center;
-  align-items: center;
-  gap: 7.272px;
+  white-space: nowrap;
 }
 #mainbottom ul.image-list_center li .text span {
   color: var(--Color-3, #558CCF);
   text-align: center;
-  font-family: Paperlogy;
-  font-size: 23.27px;
+  font-family: "Paperlogy 3 Light" !important;
+  font-size: 18px;
   font-style: normal;
-  font-weight: 500;
   line-height: normal;
 }
