박스쉐도우 추가

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -167,6 +167,7 @@ body, #headerwarp {
   background-color: white;
   border-radius: 50%;
   padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 #mainbottom ul.image-list_center li .text {
   white-space: nowrap;
