--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -185,6 +185,7 @@ body, #headerwarp{
                 background-color: white;
                 border-radius: 50%;
                 padding: 20px;
+                box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
                 }
             .text{              
               white-space: nowrap;             
