--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -32,7 +32,7 @@ body, #headerwarp {
 }
 #gNavi.gNavi > ul ul {
   display: block !important;
-  min-width: 150px;
+  min-width: 115px;
   transform: translateX(0) !important;
   height: 0;
   overflow: hidden;
@@ -47,6 +47,7 @@ body, #headerwarp {
   display: block !important;
   font-size: 15px !important;
   background-color: transparent !important;
+  font-family: "Paperlogy 3 Light";
 }
 #gNavi.gNavi > ul > li > a {
   font-family: "Paperlogy 3 Light" !important;
@@ -192,12 +193,11 @@ body, #headerwarp {
   position: fixed;
   top: 0;
   right: 0;
-  width: 77px;
-  height: 100vh;
+  width: 70px;
+  bottom: 0;
   background-color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   z-index: 1000;
 }
@@ -205,27 +205,30 @@ body, #headerwarp {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  background-color: var(--Main, #F17522);
+  width: 100%;
 }
 #green19_82309 .quick-menu .quick-top_num1 .quick-img {
   display: flex;
   height: 210px;
-  padding: 29px 30px;
+  padding: 0 0;
   flex-direction: column;
   align-items: center;
   gap: 35px;
-  background-color: var(--Main, #F17522);
+  justify-content: center;
 }
 #green19_82309 .quick-menu .quick-top_num1 .quick-text {
   color: #FFF;
   text-align: center;
-  font-family: "Paperlogy 3 Light";
+  font-family: "Paperlogy 7 Bold";
   font-size: 16px;
   align-self: stretch;
+  transform: rotate(90deg);
 }
 #green19_82309 .quick-menu .quick-bottom {
   display: flex;
   flex-direction: column;
+  justify-content: end;
   gap: 15px;
 }
 #green19_82309 .quick-menu .quick-bottom .quick-btn {
