--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -223,37 +223,67 @@ body, #headerwarp{
         align-items: center;
         z-index: 1000;
 
-        .quick-top_num1 {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: var(--Main, #F17522);
-            width: 100%;
-
-            .quick-img {
+        .quick-top {
+            &.num1 {
                 display: flex;
-                height: 210px;
-                padding: 0 0;
                 flex-direction: column;
                 align-items: center;
-                gap: 35px;
-                justify-content: center;
+                background-color: var(--Main, #F17522);
+                width: 100%;
+
+                .quick-img {
+                    display: flex;
+                    height: 210px;
+                    padding: 0;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 35px;
+                    justify-content: center;
+                }
+
+                .quick-text {
+                    color: #FFF;
+                    text-align: center;
+                    font-family: "Paperlogy 7 Bold";
+                    font-size: 16px;
+                    align-self: stretch;
+                    transform: rotate(90deg);
+                }
             }
 
-            .quick-text {
-                color: #FFF;
-                text-align: center;
-                font-family: "Paperlogy 7 Bold";
-                font-size: 16px;
-                align-self: stretch;
-                transform: rotate(90deg);
+            &.num2 {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                background: var(--Color-2, #DBEBF6);
+                width: 100%;
+
+                .quick-img {
+                    display: flex;
+                    height: 210px;
+                    padding: 0;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 35px;
+                    justify-content: center;
+                }
+
+                .quick-text {
+                    color: #000000;
+                    text-align: center;
+                    font-family: "Paperlogy 7 Bold";
+                    font-size: 16px;
+                    align-self: stretch;
+                    transform: rotate(90deg);
+                }
             }
         }
-
+    }
         .quick-bottom {
             display: flex;
             flex-direction: column;
-            justify-content: end;
+            bottom: 0;
+            position: absolute;
             gap: 15px;
 
             .quick-btn {
@@ -273,8 +303,8 @@ body, #headerwarp{
                 }
             }
         }
-    }
-}
+ }
+
   
   
   
