--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -224,7 +224,7 @@ body, #headerwarp{
         z-index: 1000;
 
        
-            &.quick-top_num1 {
+            .quick-top_num1 {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -251,7 +251,7 @@ body, #headerwarp{
                 }
             }
 
-            &.quick-top_num1 {
+            .quick-top_num2 {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
