[첫번째 배너]이미지 추가

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -305,6 +305,19 @@ body, #headerwarp{
         }
  }
 
+ .firstbanner-section {
+    height: 50vh;
+    width: 100%;
+    background: url("https://juhyun88.github.io/iweb_src/first_banner/Lbg.jpg") center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: white;
+    text-align: center;
+    overflow: hidden;
+
+  }
   
   
   
