--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -272,14 +272,41 @@ body, #headerwarp {
 }
 
 .firstbanner-section {
-  height: 50vh;
-  width: 100%;
+  height: 592px;
+  width: 960px;
   background: url("https://juhyun88.github.io/iweb_src/first_banner/Lbg.jpg") center/cover no-repeat;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: end;
   position: relative;
   color: white;
-  text-align: center;
   overflow: hidden;
+}
+.firstbanner-section .firstbanner-text {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 76.32px;
+  margin-left: 62px;
+}
+.firstbanner-section .firstbanner-text .firstbanner-text_num1 {
+  color: var(--Main, #F17522);
+  font-family: "Paperlogy 6 SemiBold";
+  font-size: 20px !important;
+  font-style: normal;
+  line-height: normal;
+  text-align: start;
+}
+.firstbanner-section .firstbanner-text .firstbanner-text_num2 {
+  display: flex;
+  width: 550px;
+  height: 107.309px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  color: #FFF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  font-family: "Paperlogy 5 Medium";
+  font-size: 45px !important;
+  font-style: normal;
+  line-height: normal;
+  text-align: start;
 }
