[게시판]동영상 추가

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -310,3 +310,7 @@ body, #headerwarp {
   line-height: normal;
   text-align: start;
 }
+
+#green19_82116 .bannerGuide {
+  background: url("https://juhyun88.github.io/iweb_src/youtube/dd.mp4") center/cover no-repeat;
+}
