--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -349,8 +349,11 @@ body, #headerwarp{
   }
   
   
-  
- 
+  #green19_82116{
+    .bannerGuide{
+        background: url("https://juhyun88.github.io/iweb_src/youtube/dd.mp4") center/cover no-repeat;
+    }
+}
 
 
   
