--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -310,3 +310,8 @@ body, #headerwarp {
   line-height: normal;
   text-align: start;
 }
+
+#green19_78756,
+#green19_78757 {
+  display: none !important;
+}
