섹션 재 정리

--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -349,7 +349,7 @@ body, #headerwarp{
   }
 
   #green19_78756,
-  #green19_78757{
+  #green19_78757, #green19_80662, #green19_82380, #green19_78759{
     display: none !important;
 
   }
