--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -347,9 +347,67 @@ body, #headerwarp{
     }
 
   }
-
+//섹션 정리//
   #green19_78756,
   #green19_78757, #green19_80662, #green19_82380, #green19_78759{
     display: none !important;
 
   }
+
+  //의사들 슬랙슬라이드//
+  .slick-current .doctor-item  .doctor-cir{margin-top: -53px; width: 226px; height: 226px;}
+.slick-current .doctor-item  .doctor-cir .inner{border-width: 0;
+    box-shadow: none;
+background: var(--primery); 
+background: -moz-radial-gradient(center, ellipse cover,  var(--primery) 0%, #ff7a2c 38%, #f28b1e 95%);
+background: -webkit-radial-gradient(center, ellipse cover,  var(--primery) 0%,#ff7a2c 38%,#f28b1e 95%); 
+background: radial-gradient(ellipse at center,  var(--primery) 0%,#ff7a2c 38%,#f28b1e 95%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--primery)', endColorstr='#f28b1e',GradientType=1 ); 
+}
+.slick-current .doctor-item  .doctor-cir .img{width: 87px; height: 88px;}
+ 
+.slick-current .doctor-item.item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/1.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/2.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/3.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/4.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/5.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/6.svg") center/cover no-repeat;}
+
+
+.slick-current .doctor-item  .doctor-cir > span:nth-child(2) {
+	-webkit-animation-delay: 0.3s;
+	animation-delay: 0.3s; 
+}
+.slick-current .doctor-item  .doctor-cir > span:nth-child(3) {
+	-webkit-animation-delay: 0.8s;
+		animation-delay: 0.8s;
+}
+.slick-current .doctor-item  .doctor-cir > span {
+	border:1px solid rgba(239, 132, 37, 1) ;
+	border-radius: 50%;
+	-webkit-animation-fill-mode: both;
+			animation-fill-mode: both;
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+	-webkit-animation: nation-circle 1.8s infinite linear;
+	animation: nation-circle 1.8s infinite linear; 
+}
+
+@keyframes nation-circle {
+	0% {
+		-webkit-transform: scale(0.6);
+		transform: scale(0.6);
+		opacity: 0.8; 
+	}
+	100% {
+		-webkit-transform: scale(1.4);
+		transform: scale(1.4);
+		opacity: 0; 
+	}
+}
+  
