--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -372,12 +372,13 @@ body, #headerwarp{
       box-shadow: 0 4px 4px 0px rgba(0,0,0,.5);
       border: 0px solid #fe5f03; -webkit-border-radius: 100%; border-radius: 100%; z-index: 1; -webkit-box-sizing: border-box; box-sizing: border-box;}
   .doctor-cir .img{position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; width: 49px; height: 49px;}
-  .item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/1.svg") center/cover no-repeat;}
-  .item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/2.svg") center/cover no-repeat;}
-  .item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/3.svg") center/cover no-repeat;}
-  .item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/4.svg") center/cover no-repeat;}
-  .item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/5.svg") center/cover no-repeat;}
-  .item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/6.svg") center/cover no-repeat;}
+  .item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat;}
+  .item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat;}
+  .item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat;}
+  .item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg") center/cover no-repeat;}
+  .item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat;}
+  .item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat;}
+  .item07 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat;}
   .doctor-txt{margin-top: 30px; text-align: center;}
   .doctor-txt .tit{font-size: 22px; line-height: 1.3; font-weight: 600; letter-spacing: -0.5px; color: #3a3a3a;}
   .doctor-txt .num{margin-top: 15px; font-size: 42px; letter-spacing: -0.25px; color: #3a3a3a;}
@@ -409,6 +410,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--primery
 .slick-current .doctor-item.item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/4.svg") center/cover no-repeat;}
 .slick-current .doctor-item.item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/5.svg") center/cover no-repeat;}
 .slick-current .doctor-item.item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/6.svg") center/cover no-repeat;}
+.slick-current .doctor-item.item07 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/clinical_trial/on/7.svg") center/cover no-repeat;}
 
 
 .slick-current .doctor-item  .doctor-cir > span:nth-child(2) {
