--- a/css/juhyun.scss
+++ b/css/juhyun.scss
@@ -354,65 +354,178 @@ body, #headerwarp{
 
   }
 // 의사들 //
-#green19_78758{
-    padding-top: 25px; 
-    height: 1000px; 
-    background-color: #FFF; background-size:cover; -webkit-box-sizing: border-box; box-sizing: border-box;}
-  
-  .doctor-wrapper{position: relative; margin-top: 135px;}
-  .doctor-wrapper:before{position: absolute; top: 67px; left: 0; content: ''; width: 100%; height: 1px; background-color: rgba(0,0,0,0.1);}
-  .doctor-area{padding: 0 5.6%;}
-  .doctor-list-pc{display: block;}
-  .doctor-list-m{display: none;}
-  .doctor-list{margin: 0 -10px;}
-  .doctor-list .slick-list{overflow: visible;}
-  .doctor-item{float: left; width: calc(20% - 20px); margin: 0 10px;}
-  .doctor-cir{position: relative; margin: 0 auto; width: 704px; height: 483px;}
-  .doctor-cir .inner{position: absolute; width: 100%; height: 100%; background-color: #fff; 
-      z-index: 1; -webkit-box-sizing: border-box; box-sizing: border-box;}
-  .doctor-cir .img{position: absolute; top: 0; right: 0; bottom: 0; left: 0; margin: auto; width: 528px; height: 363px;}
-  .item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat;}
-  .item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat;}
-  .item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat;}
-  .item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg") center/cover no-repeat;}
-  .item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat;}
-  .item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat;}
-  .item07 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat;}
+#green19_78758 {
+    padding-top: 25px;
+    height: 1000px;
+    background-color: #FFF;
+    background-size: cover;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
-  
-  .doctor-cir, 
-  .doctor-cir .inner,
-  .doctor-cir .img, 
-  .doctor-txt,
-  .doctor-txt .tit, 
-  .doctor-txt .num,
-  .doctor-txt .year{-webkit-transition: all 0.4s; transition: all 0.4s;}
-  
-  //의사들 슬랙슬라이드//
-  .slick-current .doctor-item  .doctor-cir{margin-top: -53px; width: 226px; height: 226px;}
-.slick-current .doctor-item  .doctor-cir .inner{border-width: 0;
+.doctor-wrapper {
+    position: relative;
+    margin-top: 135px;
+}
+
+.doctor-wrapper:before {
+    position: absolute;
+    top: 67px;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.doctor-area {
+    padding: 0 5.6%;
+}
+
+.doctor-list-pc {
+    display: block;
+}
+
+.doctor-list-m {
+    display: none;
+}
+
+.doctor-list {
+    margin: 0 -10px;
+}
+
+.doctor-list .slick-list {
+    overflow: visible;
+}
+
+.doctor-item {
+    float: left;
+    width: calc(20% - 20px);
+    margin: 0 10px;
+}
+
+.doctor-cir {
+    position: relative;
+    margin: 0 auto;
+    width: 800px; /* Increased size */
+    height: 550px; /* Increased size */
+}
+
+.doctor-cir .inner {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 1;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.doctor-cir .img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    width: 600px; /* Increased size */
+    height: 400px; /* Increased size */
+}
+
+.item01 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg") center/cover no-repeat;
+}
+
+.item02 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg") center/cover no-repeat;
+}
+
+.item03 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg") center/cover no-repeat;
+}
+
+.item04 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg") center/cover no-repeat;
+}
+
+.item05 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg") center/cover no-repeat;
+}
+
+.item06 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg") center/cover no-repeat;
+}
+
+.item07 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg") center/cover no-repeat;
+}
+
+.doctor-cir,
+.doctor-cir .inner,
+.doctor-cir .img,
+.doctor-txt,
+.doctor-txt .tit,
+.doctor-txt .num,
+.doctor-txt .year {
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
+}
+
+// 의사들 슬랙슬라이드 //
+.slick-current .doctor-item .doctor-cir {
+    margin-top: -53px;
+    width: 300px; /* Increased size */
+    height: 300px; /* Increased size */
+}
+
+.slick-current .doctor-item .doctor-cir .inner {
+    border-width: 0;
     box-shadow: none;
 
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='var(--primery)', endColorstr='#f28b1e',GradientType=1 ); 
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='var(--primery)', endColorstr='#f28b1e', GradientType=1);
 }
-.slick-current .doctor-item  .doctor-cir .img{width: 704px; height: 483px;}
- 
-.slick-current .doctor-item.item01 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/1.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item02 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/2.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item03 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/3.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item04 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/4.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item05 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/5.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item06 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/6.svg") center/cover no-repeat;}
-.slick-current .doctor-item.item07 .doctor-cir .img{background: url("https://juhyun88.github.io/iweb_src/doctor/on/7.svg") center/cover no-repeat;}
 
-
-.slick-current .doctor-item  .doctor-cir > span:nth-child(2) {
-	-webkit-animation-delay: 0.3s;
-	animation-delay: 0.3s; 
+.slick-current .doctor-item .doctor-cir .img {
+    width: 800px; /* Increased size */
+    height: 550px; /* Increased size */
 }
-.slick-current .doctor-item  .doctor-cir > span:nth-child(3) {
-	-webkit-animation-delay: 0.8s;
-		animation-delay: 0.8s;
+
+.slick-current .doctor-item.item01 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/on/1.svg") center/cover no-repeat;
+}
+
+.slick-current .doctor-item.item02 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/on/2.svg") center/cover no-repeat;
+}
+
+.slick-current .doctor-item.item03 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/on/3.svg") center/cover no-repeat;
+}
+
+.slick-current .doctor-item.item04 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/on/4.svg") center/cover no-repeat;
+}
+
+.slick-current .doctor-item.item05 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/on/5.svg") center/cover no-repeat;
+}
+
+.slick-current .doctor-item.item06 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/on/6.svg") center/cover no-repeat;
+}
+
+.slick-current .doctor-item.item07 .doctor-cir .img {
+    background: url("https://juhyun88.github.io/iweb_src/doctor/on/7.svg") center/cover no-repeat;
+}
+
+.slick-current .doctor-item .doctor-cir > span:nth-child(2) {
+    -webkit-animation-delay: 0.3s;
+    animation-delay: 0.3s;
+}
+
+.slick-current .doctor-item .doctor-cir > span:nth-child(3) {
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
 }
 
 @keyframes nation-circle {
