--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -447,32 +447,53 @@ body, #headerwarp {
   height: 550px; /* Increased size */
 }
 
-.slick-current .doctor-item.item01 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/active/1.svg") center/cover no-repeat;
+.slick-current .doctor-item.item1 .doctor-cir .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item02 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/active/2.svg") center/cover no-repeat;
+.slick-current .doctor-item.item2 .doctor-cir .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor2.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item03 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/active/3.svg") center/cover no-repeat;
+.slick-current .doctor-item.item3 .doctor-cir .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor3.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item04 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/active/4.svg") center/cover no-repeat;
+.slick-current .doctor-item.item4 .doctor-cir .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor4.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item05 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/active/5.svg") center/cover no-repeat;
+.slick-current .doctor-item.item5 .doctor-cir .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor5.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item06 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/active/6.svg") center/cover no-repeat;
+.slick-current .doctor-item.item6 .doctor-cir .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor6.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.slick-current .doctor-item.item07 .doctor-cir .img {
-  background: url("https://juhyun88.github.io/iweb_src/doctor/active/7.svg") center/cover no-repeat;
+.slick-current .doctor-item.item7 .doctor-cir .img {
+  background-image: url("https://juhyun88.github.io/iweb_src/doctor/doctor7.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .slick-current .doctor-item .doctor-cir > span:nth-child(2) {
