[의사들]이미지 사이즈 수정3

--- a/css/juhyun.css
+++ b/css/juhyun.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body, #headerwarp {
   min-width: 1500px !important;
 }
@@ -432,8 +433,9 @@ body, #headerwarp {
 
 .slick-current .doctor-item .doctor-cir {
   margin-top: -53px;
-  width: 500px; /* Increased size */
-  height: 500px; /* Increased size */
+  width: 600px; /* 수정 */
+  height: 600px; /* 수정*/
+  z-index: 2;
 }
 
 .slick-current .doctor-item .doctor-cir .inner {
@@ -443,8 +445,19 @@ body, #headerwarp {
 }
 
 .slick-current .doctor-item .doctor-cir .img {
-  width: 500px; /* Increased size */
-  height: 500px; /* Increased size */
+  width: 600px; /* 수정*/
+  height: 600px; /* 수정*/
+  z-index: 1; /* 수정*/
+}
+
+.slick-prev, .slick-next {
+  z-index: 3; /* 슬라이드 네비게이션 버튼이 이미지보다 앞에 보이도록 설정 */
+}
+
+.doctor-item .doctor-cir {
+  width: 500px; /* 기본 이미지 크기 */
+  height: 500px; /* 기본 이미지 크기 */
+  transition: all 0.4s ease-in-out; /* 부드러운 전환 효과 */
 }
 
 .slick-current .doctor-item.item1 .doctor-cir .img {
